ci: add semantic-release config * ci: add npm package info * ci: update release workflow to build styles

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Build
-        run: yarn build
+      - name: Build styles
+        run: yarn build:styles
 
       - name: Release
         uses: cycjimmy/semantic-release-action@v3
