--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/release-notes-generator": "^12.1.0",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
@@ -41,11 +46,15 @@
     "postcss-import": "^16.0.0",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "semantic-release": "^23.0.2",
     "storybook": "^7.6.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "resolutions": {
     "jackspeak": "2.1.1"
-  }
+  },
+  "files": [
+    "./dist/styles.css"
+  ]
 }
