chore: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-design-system",
+  "name": "@octoai/demo-design-system",
   "version": "0.1.0",
   "author": "Chai Landau <clandau@octo.ai>",
   "description": "OctoAI Demo Design System",
