--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "^18",
+    "react-aria-components": "^1.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
